project (noteshare_pdf)

set(NOTESHARE_PDF_VERSION_MAJOR 1)
set(NOTESHARE_PDF_VERSION_MINOR 0)
set(NOTESHARE_PDF_VERSION_PATCH 0)
set(NOTESHARE_PDF_VERSION ${NOTESHARE_PDF_VERSION_MAJOR}.${NOTESHARE_PDF_VERSION_MINOR}.${NOTESHARE_PDF_VERSION_PATCH})

cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(src)